Completed 'Session_Creation_and_use' project

--- a/12-Sept-2023/Session_Creation_and_use/README
+++ b/12-Sept-2023/Session_Creation_and_use/README
@@ -1,3 +1,57 @@
-run `npm install` in './'
-run `node server.mjs` in './'
-open 'index.html' file in './public'
+# Baby Name Generator Web App
+
+This web application generates and allows you to save baby names that you like. It consists of a frontend UI layer and a backend application tier.
+
+## Getting Started
+
+Follow these steps to run the project locally on your machine.
+
+### Prerequisites
+
+- Node.js installed on your machine. You can download it from [nodejs.org](https://nodejs.org/).
+
+### Installation
+
+1. Navigate to the project directory:
+
+   ```bash
+   cd Session_Creation_and_use
+
+
+2. Install project dependencies by running the following command:
+
+   npm install
+
+Running the Application
+
+1. Start the server by running the following command in the project directory './Session_Creation_and_use' :
+
+   node server.mjs
+
+   This will start the backend server.
+
+2. Open a web browser and go to http://localhost:3000 to access the frontend UI.
+
+Using the Application
+
+- You can request baby names from the computer by clicking the "Random" button on the UI.
+- The computer will return 5 new and different baby names in an array.
+- You can save the baby names you like by clicking on them.
+- Saved names will be displayed in the "Selected Names" section.
+
+Project Structure
+
+The project is organized as follows:
+
+- public/ directory contains the frontend files including index.html, client-side JavaScript modules, and CSS styles.
+- server.mjs is the Node.js server that handles GET and POST routes for baby names.
+
+Requirements
+
+1. This project uses frontend ES6 Modules in client-side JavaScript.
+2. The backend is implemented using Node.js.
+3. CSS is used to create a user-friendly UI that looks good on both mobile phones and standard laptop displays (1440 x 980).
+
+License
+
+This project is licensed under the MIT License. See the LICENSE file for details.
