Updated Youtube README

--- a/12-Sept-2023/Session_Creation_and_use/README
+++ b/12-Sept-2023/Session_Creation_and_use/README
@@ -4,6 +4,7 @@ This web application generates and allows you to save baby names that you like. 
 
 ## Getting Started
 
+[![DEMO](https://img.youtube.com/vi/RNavZzfCACk/0.jpg)](https://youtu.be/RNavZzfCACk)
 Follow these steps to run the project locally on your machine.
 
 ### Prerequisites
